# ksai_proc

./: .gitignore  Cargo.toml  README.md
docs/: README.md
docs/architecture/: data_flow.mmd  overview.md  system_context.mmd
docs/cli/: commands.md  workflows.mmd
docs/process_management/: lifecycle.md  lifecycle_state_machine.mmd  revival.md  revival_sequence.mmd
docs/tui/: event_loop.mmd  interface.md
src/: app.rs  main.rs  monitor.rs  process.rs  scheduler.rs  state.rs  types.rs  ui.rs
tests/: conftest.py  test_cli_basic.py  test_infra_edge_cases.py  test_scheduler.py  test_scheduler_advanced.py  test_scheduler_self_healing.py
